--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <div class="jumbotron_background">   
         <body  style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color: #99bbff;">
-                <div class="row">
-                    <div class="col-sm-10">
+               <!-- <div class="row">
+                    <div class="col-sm-10">-->
                         <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
-                    </div>
+                   <!-- </div>-->
                     <!--<div class="col-sm-2">
                         <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                             <img src="images/profilepicture.jpg"  width="155" height = "125" style="padding-left:30px;">
                         </a>
-                    </div>-->
-                </div>
+                    </div>
+                </div>-->
             </div>  
 
 
