--- a/Projects.html
+++ b/Projects.html
@@ -92,14 +92,14 @@
                 <!--</div>-->
             </div>  
             <div class="col-sm-1"></div>
-            <div class="col-sm-6" style ="border-left: 1px solid #ccc;"> 
+            <div class="col-sm-6"> 
                 <center>
                     <img src="images/machine.png" class="img-responsive" width = "450" height = "350" style="margin:10px;">
                 </center>
             </div>
         </div>
         <div class="row" style="background-color:lavenderblush;">
-            <div class="col-sm-6" style ="border-right: 1px solid #ccc;"> 
+            <div class="col-sm-6"> 
                 <center>
                     <img src="images/monalisacombo.png" class="img-responsive" width = "450" height = "350" style="margin:10px;">
                 </center>
@@ -127,7 +127,7 @@
                my website.</p>
            </div> 
             <div class="col-sm-1"></div>
-            <div class="col-sm-6" style ="border-left: 1px solid #ccc;"> 
+            <div class="col-sm-6"> 
                 <center>
                     <img src="images/spaceinvaders.jpg" class="img-responsive" width = "450" height = "350" style="margin:10px;">
                 </center>
@@ -136,7 +136,7 @@
         </div>    
         
         <div class="row"  style="background-color:lavenderblush;">
-            <div class="col-sm-6" style ="border-right: 1px solid #ccc;"> 
+            <div class="col-sm-6"> 
                 <center>
                     <img src="images/Plannit-logo.png" class="img-responsive" width = "400" height = "100" style="margin:10px;">
                 </center>
@@ -160,7 +160,7 @@
                the duck shooter game I created.</p>
            </div>
            <div class="col-sm-1"></div>
-            <div class="col-sm-6" style ="border-left: 1px solid #ccc;"> 
+            <div class="col-sm-6"> 
                 <center>
                     <img src="images/carnivalgames.jpg" class="img-responsive" width = "450" height = "400" style="margin:10px;">
                 </center>
