--- a/test.html
+++ b/test.html
@@ -1,1 +1,51 @@
+<html lang="en">
+    <title>Amherst iPhone Repair</title>
+        <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
 
+          <!-- Bootstrap -->
+          <link href="css/bootstrap.min.css" rel="stylesheet">
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <!-- Include all compiled plugins (below), or include individual files as needed -->
+          <script src="js/bootstrap.min.js"></script>
+
+        </head>
+        
+        <style>
+            .jumbotron_background {
+                position: relative;
+                background-color:  #800000;
+            }
+            .navbar-custom {
+                font-size: 18px;
+                color: blue;
+                margin-bottom:0px; 
+                background-color:#000; 
+                border-style: none;
+            }
+        </style>
+        
+        <div class="jumbotron_background">   
+        <body  style="overflow-x:hidden;">
+            <div class="jumbotron" style="background-color: #99bbff;">
+               <!-- <div class="row">
+                    <div class="col-sm-10">-->
+                        <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
+                   <!-- </div>-->
+                    <!--<div class="col-sm-2">
+                        <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
+                            <img src="images/profilepicture.jpg"  width="155" height = "125" style="padding-left:30px;">
+                        </a>
+                    </div>
+                </div>-->
+            </div>  
+
+        </body>
+        <footer>
+
+        </footer>  
+       </div>
+</html>
