--- a/test.html
+++ b/test.html
@@ -22,13 +22,16 @@
                 background-color:#000; 
                 border-style: none;
             }
+            .font_2 {
+                font: normal normal normal 34px/1.4em 'Fredericka the Great',fantasy;
+                color: #AA1218;
+            }
         </style>
  
         <body  style="overflow-x:hidden;  background-color:  #800000;">
-            <div class="jumbotron" style="background-color: #99bbff;">
-                <h1 style="padding-left:30px;"> Hi I'm Matt</h1>
-            </div>  
-            <p>heello</p>
+            <center>
+                <h1 class="font_2"> Amherst iPhone Repairs</h1>
+            </center>    
         </body>
         <footer>
 
