--- a/test.html
+++ b/test.html
@@ -30,7 +30,11 @@
  
         <body  style="overflow-x:hidden;  background-color:  #800000;">
             <center>
-                <h1 class="font_2"> Amherst iPhone Repairs</h1>
+                <span style="font-size:60px;">
+                    <span style="color:#FFF;">
+                        <h1 class="font_2"> Amherst iPhone Repairs</h1>
+                    </span>    
+                </span>
             </center>    
         </body>
         <footer>
