--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
             <center>
                 <span style="font-size:60px;">
                     <span style="color:#FFF;">
-                        <h1 class="font_2"> Amherst iPhone Repairs</h1>
+                         Amherst iPhone Repairs
                     </span>    
                 </span>
             </center>    
