--- a/test.html
+++ b/test.html
@@ -30,11 +30,13 @@
  
         <body  style="overflow-x:hidden;  background-color:  #800000;">
             <center>
-                <span style="font-size:60px;">
-                    <span style="color:#FFF;">
-                         Amherst iPhone Repairs
-                    </span>    
-                </span>
+                <h2 style="font-size: 60px; text-align: center;" class="font_2">
+                    <span style="font-size:60px;">
+                        <span style="color:#FFF;">
+                             Amherst iPhone Repairs
+                        </span>    
+                    </span>
+                </h2>
             </center>    
         </body>
         <footer>
