--- a/test.html
+++ b/test.html
@@ -24,6 +24,13 @@
             }
             .font_2 {
                 font: normal normal normal 34px/1.4em 'Fredericka the Great',fantasy;
+                font-style: normal;
+                font-variant: normal;
+                font-weight: normal;
+                font-stretch: normal;
+                font-size: 34px;
+                line-height: 1.4em;
+                font-family: 'Fredericka the Great', fantasy;
                 color: #AA1218;
             }
         </style>
