--- a/test.html
+++ b/test.html
@@ -43,7 +43,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>                        
                   </button>
-                  <a class="navbar-brand" href="#"></a>
+                 <a class="navbar-brand" href=# target="_blank" style="padding:5px;">
+                        <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="60" height="40">
+                  </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
