--- a/test.html
+++ b/test.html
@@ -35,6 +35,16 @@
         </style>
  
         <body  style="overflow-x:hidden;  background-color:  #800000;">
+            <center>
+                <h2 style="font-size: 60px; text-align: center;" class="font_2">
+                    <span style="font-size:60px;">
+                        <span style="color:#FFF;">
+                             Amherst iPhone Repairs
+                        </span>    
+                    </span>
+                </h2>
+            </center> 
+            
             <nav class="navbar navbar-default">
               <div class="container-fluid">
                 <div class="navbar-header">
@@ -43,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>                        
                   </button>
-                 <a class="navbar-brand" href=# target="_blank" style="padding:5px;">
+                 <a class="navbar-brand" href="#" target="_blank" style="padding:5px;">
                         <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="60" height="40">
                   </a>
                 </div>
@@ -61,16 +71,6 @@
                 </div>
               </div>
             </nav>
-            
-            <center>
-                <h2 style="font-size: 60px; text-align: center;" class="font_2">
-                    <span style="font-size:60px;">
-                        <span style="color:#FFF;">
-                             Amherst iPhone Repairs
-                        </span>    
-                    </span>
-                </h2>
-            </center>    
         </body>
         <footer>
 
