--- a/test.html
+++ b/test.html
@@ -71,6 +71,8 @@
                 </div>
               </div>
             </nav>
+            
+            <img src="images/amherst.jpg" class="img-responsive" width="100%" height="400">
         </body>
         <footer>
 
