--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
                 </h2>
             </center> 
             
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
               <div class="container-fluid">
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
