--- a/test.html
+++ b/test.html
@@ -71,8 +71,12 @@
                 </div>
               </div>
             </nav>
-            
-            <img src="images/amherst.jpg" class="img-responsive" width="100%" height="500">
+            <div style="position: relative;">
+                <img src="images/amherst.jpg" class="img-responsive" width="100%" height="500">
+                <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>
+                <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Sell</button>
+            </div>    
+                
         </body>
         <footer>
 
