--- a/test.html
+++ b/test.html
@@ -73,7 +73,7 @@
             </nav>
             <div style="position: relative;">
                 <img src="images/amherst.jpg" class="img-responsive" width="100%" height="500">
-                <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Sell</button>
+                <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>
             </div>    
                 
