--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
               </div>
             </nav>
             <div style="position: relative;">
-                <img src="images/amherst.jpg" class="img-responsive" width="100%" height="500">
+                <img src="images/amherst.jpg" class="img-responsive" width="100%" >
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>
             </div>    
