--- a/test.html
+++ b/test.html
@@ -44,7 +44,7 @@
                     </span>
                 </h2>
             </center> 
-            
+            <div class="container">
             <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
               <div class="container-fluid">
                 <div class="navbar-header">
@@ -76,7 +76,7 @@
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>
             </div>    
-                
+            </div>    
         </body>
         <footer>
 
