--- a/test.html
+++ b/test.html
@@ -71,8 +71,8 @@
                 </div>
               </div>
             </nav>
-            <div style="position: relative;">
-                <img src="images/amherst.jpg" class="img-responsive" width="100%" style="position: relative;">
+            <div style="position: relative; display:inline-block;">
+                <img src="images/amherst.jpg">
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>
             </div>    
