--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
               </div>
             </nav>
             <div style="position: relative; display:inline-block;">
-                <img src="images/amherst.jpg">
+                <img src="images/amherst.jpg"/>
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                 <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>
             </div>    
