--- a/test.html
+++ b/test.html
@@ -59,42 +59,42 @@
                 </h2>
             </center> 
             <div class="container">
-            <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
-              <div class="container-fluid">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>                        
-                  </button>
-                 <a class="navbar-brand" href="#" target="_blank" style="padding:5px;">
-                        <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="80" height="40">
-                  </a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Repair</a></li>
-                    <li><a href="#">Sell</a></li>
-                    <li><a href="#">Contact</a></li>
-                  </ul>
-                  <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-            <div style="position: relative;">
-                <div id="img_container">
-                    <img src="images/amherst.jpg"/ width="100%">
-                    <button class="button"> click here </button>
-                </div>
-                <!--<img src="images/amherst.jpg" width="100%"><!--class="img-responsive" width="100%"-->
-                <!--<button style="position:absolute;"> click here </button>
-                <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
-                <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
-            </div>    
+                <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
+                  <div class="container-fluid">
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                        
+                      </button>
+                     <a class="navbar-brand" href="#" target="_blank" style="padding:5px;">
+                            <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="80" height="40">
+                      </a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                      <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Repair</a></li>
+                        <li><a href="#">Sell</a></li>
+                        <li><a href="#">Contact</a></li>
+                      </ul>
+                      <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </nav>
+                <div style="position: relative;">
+                    <div id="img_container">
+                        <img src="images/amherst.jpg"/ width="100%">
+                        <button class="btn btn-lg btn-info button"> click here </button>
+                    </div>
+                    <!--<img src="images/amherst.jpg" width="100%"><!--class="img-responsive" width="100%"-->
+                    <!--<button style="position:absolute;"> click here </button>
+                    <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
+                    <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
+                </div>    
             </div>    
         </body>
         <footer>
