--- a/test.html
+++ b/test.html
@@ -34,9 +34,7 @@
             }
             #img_container {
                 position:relative;
-                display:inline-block;
-                text-align:center;
-                border:1px solid red;
+                width: 100%;
             }
             
             .button {
