--- a/test.html
+++ b/test.html
@@ -34,6 +34,7 @@
             }
             #img_container {
                 position:relative;
+                 display:inline-block;
                 width: 100%;
             }
             
