--- a/test.html
+++ b/test.html
@@ -40,6 +40,10 @@
             
             .button {
                 position:absolute;
+                bottom:10px;
+                right:10px;
+                width:100px;
+                height:30px;
             }
         </style>
  
