--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
             #img_container {
                 position:relative;
                 display:inline-block;
-                
+                width:100%;
             }
             
             .button {
