--- a/test.html
+++ b/test.html
@@ -40,7 +40,8 @@
             
             .button {
                 position:absolute;
-
+                top:50%;
+                left:50%;
             }
         </style>
  
