--- a/test.html
+++ b/test.html
@@ -57,6 +57,8 @@
             </center> 
             <div class="container">
                 <div class="row">
+                    <div class="col-sm-2"></div>
+                        
                     <div class="col-sm-6">
                     <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
                       <div class="container-fluid">
@@ -95,7 +97,7 @@
                         </div>    
                     </div>  
                     
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <button class="btn btn-lg btn-info button"> Sell </button>
                     </div>    
                 </div>    
