--- a/test.html
+++ b/test.html
@@ -33,15 +33,9 @@
                 color: #AA1218;
             }
             #img_container {
-                position:relative;
-                display:inline-block;
+                /*position:relative;
+                display:inline-block;*/
                 width:100%;
-            }
-            
-            .button {
-                position:absolute;
-                top:50%;
-                left:45%;
             }
         </style>
  
