--- a/test.html
+++ b/test.html
@@ -91,7 +91,7 @@
                     </div>  
                     
                     <div class="col-sm-4">
-                        <button class="btn btn-lg btn-info button"> Sell </button>
+                        <button class="btn btn-lg btn-info "> Sell </button>
                     </div>    
                 </div>    
         </body>
