--- a/test.html
+++ b/test.html
@@ -50,9 +50,9 @@
                 </h2>
             </center> 
                 <div class="row">
-                    <div class="col-sm-2"></div>
+                    <div class="col-sm-1"></div>
                         
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">
                     <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
                       <div class="container-fluid">
                         <div class="navbar-header">
@@ -81,7 +81,7 @@
                     </nav>
                         <div style="position: relative;">
                             <div id="img_container">
-                                <img src="images/amherst.jpg"/ width="100%">
+                                <img src="images/amherst.jpg"/ width="100%" height=200px>
                             </div>
                             <!--<img src="images/amherst.jpg" width="100%"><!--class="img-responsive" width="100%"-->
                             <!--<button style="position:absolute;"> click here </button>
@@ -90,8 +90,8 @@
                         </div>    
                     </div>  
                     
-                    <div class="col-sm-2">
-                        <button class="btn btn-lg btn-info "> Sell </button>
+                    <div class="col-sm-3">
+                        <button class="btn btn-lg btn-success "> Sell your Phone</button>
                     </div>    
                 </div>    
         </body>
