--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
                 </h2>
             </center> 
                 <div class="row">
-                    <div class="col-sm-1"></div>
+                    <div class="col-sm-2"></div>
                         
                     <div class="col-sm-8">
                     <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
@@ -81,7 +81,7 @@
                     </nav>
                         <div style="position: relative;">
                             <div id="img_container">
-                                <img src="images/amherst.jpg"/ width="100%" height=200px>
+                                <img src="images/amherst.jpg"/ width="100%" height=350px>
                             </div>
                             <!--<img src="images/amherst.jpg" width="100%"><!--class="img-responsive" width="100%"-->
                             <!--<button style="position:absolute;"> click here </button>
@@ -89,10 +89,9 @@
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
                         </div>    
                     </div>  
-                    
-                    <div class="col-sm-3">
-                        <button class="btn btn-lg btn-success "> Sell your Phone</button>
-                    </div>    
+                </div>   
+                <div class="container">
+                    <button class="btn btn-lg btn-success "> Sell your Phone</button>
                 </div>    
         </body>
         <footer>
