--- a/test.html
+++ b/test.html
@@ -91,7 +91,7 @@
                     </div>  
                 </div>   
                 <div class="container">
-                    <button class="btn btn-lg btn-success "> Sell your Phone</button>
+                   <!-- <button class="btn btn-lg btn-success "> Sell your Phone</button>-->
                 </div>    
         </body>
         <footer>
