--- a/test.html
+++ b/test.html
@@ -49,10 +49,11 @@
                     </span>
                 </h2>
             </center> 
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-sm-1"></div>
                         
-                    <div class="col-sm-10">
+                    <div class="col-sm-10">-->
+                <div class="container">    
                     <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
                       <div class="container-fluid">
                         <div class="navbar-header">
@@ -88,7 +89,6 @@
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
                         </div>    
-                    </div>  
                 </div>   
                 <div class="container">
                    <!-- <button class="btn btn-lg btn-success "> Sell your Phone</button>-->
