--- a/test.html
+++ b/test.html
@@ -82,7 +82,7 @@
                     </nav>
                         <div style="position: relative;">
                             <div id="img_container">
-                                <img src="images/amherst.jpg"/ width="100%" height=350px>
+                                <img src="images/amherst.jpg"/ width="100%" height="350">
                             </div>
                             <!--<img src="images/amherst.jpg" width="100%"><!--class="img-responsive" width="100%"-->
                             <!--<button style="position:absolute;"> click here </button>
