--- a/test.html
+++ b/test.html
@@ -90,8 +90,15 @@
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
                         </div>    
                 </div>   
-                <div class="container">
-                   <!-- <button class="btn btn-lg btn-success "> Sell your Phone</button>-->
+                <div class="row">
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">
+                        <button class="btn btn-lg btn-success "> Sell your Phone</button>
+                    </div>
+                    <div class="col-sm-3">
+                        <button class="btn btn-lg btn-danger"> Repair your Phone</button>
+                    </div>
+                    <div class="col-sm-3"></div>
                 </div>    
         </body>
         <footer>
