--- a/test.html
+++ b/test.html
@@ -88,9 +88,13 @@
                             <!--<button style="position:absolute;"> click here </button>
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
-                        </div>    
+                        </div>   
+                    <div class="btn-group">
+                        <button class="btn btn-lg btn-success "> Sell your Phone</button>
+                        <button class="btn btn-lg btn-danger"> Repair your Phone</button>
+                    </div>        
                 </div>   
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-sm-3"></div>
                     <div class="col-sm-3">
                         <button class="btn btn-lg btn-success "> Sell your Phone</button>
@@ -99,7 +103,7 @@
                         <button class="btn btn-lg btn-danger"> Repair your Phone</button>
                     </div>
                     <div class="col-sm-3"></div>
-                </div>    
+                </div>-->    
         </body>
         <footer>
 
