--- a/test.html
+++ b/test.html
@@ -89,7 +89,7 @@
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
                         </div>   
-                    <div class="btn-group">
+                    <div class="btn-group btn-group-justified">
                         <button class="btn btn-lg btn-success "> Sell your Phone</button>
                         <button class="btn btn-lg btn-danger"> Repair your Phone</button>
                     </div>        
