--- a/test.html
+++ b/test.html
@@ -104,6 +104,27 @@
                     </div>
                     <div class="col-sm-3"></div>
                 </div>-->    
+                <br><br>
+                <div class="container"> 
+                    <center>
+                        <h1>Find the schools near you!</h1>
+                        <div class="dropdown btn-group-justified">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">State
+                            <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                              <li><a href="#">HTML</a></li>
+                              <li><a href="#">CSS</a></li>
+                              <li><a href="#">JavaScript</a></li>
+                            </ul>
+                            
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">School
+                            <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                              <li><a href="#">Umass</a></li>
+                            </ul>
+                        </div>
+                    </center>
+                </div>
         </body>
         <footer>
 
