--- a/test.html
+++ b/test.html
@@ -90,8 +90,8 @@
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
                         </div>   
                     <div class="btn-group btn-group-justified">
-                        <button class="btn btn-lg btn-success "> Sell your Phone</button>
-                        <button class="btn btn-lg btn-danger"> Repair your Phone</button>
+                        <a href="#" class="btn btn-primary btn-success btn-lg">Sell your Phone</a>
+                        <a href="#" class="btn btn-primary btn-success btn-lg">Repair your Phone</a>
                     </div>        
                 </div>   
                 <!--<div class="row">
@@ -108,7 +108,7 @@
                 <div class="container"> 
                     <center>
                         <h1>Find the schools near you!</h1>
-                        <div class="dropdown btn-group-justified">
+                        <div class="dropdown btn-group btn-group-justified">
                             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">State
                             <span class="caret"></span></button>
                             <ul class="dropdown-menu">
