--- a/test.html
+++ b/test.html
@@ -91,7 +91,7 @@
                         </div>   
                     <div class="btn-group btn-group-justified">
                         <a href="#" class="btn btn-primary btn-success btn-lg">Sell your Phone</a>
-                        <a href="#" class="btn btn-primary btn-success btn-lg">Repair your Phone</a>
+                        <a href="#" class="btn btn-primary btn-danger btn-lg">Repair your Phone</a>
                     </div>        
                 </div>   
                 <!--<div class="row">
@@ -108,21 +108,24 @@
                 <div class="container"> 
                     <center>
                         <h1>Find the schools near you!</h1>
-                        <div class="dropdown btn-group btn-group-justified">
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">State
-                            <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                              <li><a href="#">HTML</a></li>
-                              <li><a href="#">CSS</a></li>
-                              <li><a href="#">JavaScript</a></li>
-                            </ul>
-                            
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">School
-                            <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                              <li><a href="#">Umass</a></li>
-                            </ul>
-                        </div>
+                          <div class="btn-group">
+                            <div class="btn-group">
+                              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                              State <span class="caret"></span></button>
+                              <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Massachusetts</a></li>
+                                <li><a href="#">Connecticut</a></li>
+                              </ul>
+                            </div>
+                            <div class="btn-group">
+                              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                              School <span class="caret"></span></button>
+                              <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Umass</a></li>
+                                <li><a href="#">Uconn</a></li>
+                              </ul>
+                            </div>
+                          </div>
                     </center>
                 </div>
         </body>
