--- a/test.html
+++ b/test.html
@@ -108,24 +108,22 @@
                 <div class="container"> 
                     <center>
                         <h1>Find the schools near you!</h1>
-                          <div class="btn-group">
-                            <div class="btn-group">
-                              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                              State <span class="caret"></span></button>
-                              <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Massachusetts</a></li>
-                                <li><a href="#">Connecticut</a></li>
-                              </ul>
-                            </div>
-                            <div class="btn-group">
-                              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                              School <span class="caret"></span></button>
-                              <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Umass</a></li>
-                                <li><a href="#">Uconn</a></li>
-                              </ul>
-                            </div>
-                          </div>
+                            <form role="form">
+                                <div class="form-group">
+                                  <label for="sel1">State</label>
+                                  <select class="form-control" id="sel1">
+                                    <option>Massachusetts</option>
+                                    <option>Connecticut</option>
+                                  </select>
+                                  <br>
+                                  <label for="sel1">School</label>
+                                  <select class="form-control" id="sel1">
+                                    <option>Umass</option>
+                                    <option>2Uconn</option>
+                                  </select>
+                                </div>
+                            </form>
+
                     </center>
                 </div>
         </body>
