--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@
                             <span class="icon-bar"></span>                        
                           </button>
                          <a class="navbar-brand" href="#" target="_blank" style="padding:5px;">
-                                <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="80" height="40">
+                                <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="80">
                           </a>
                         </div>
                         <div class="collapse navbar-collapse" id="myNavbar">
