--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@
                             <span class="icon-bar"></span>                        
                           </button>
                          <a class="navbar-brand" href="#" target="_blank" style="padding:5px;">
-                                <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="80">
+                                <img src="images/amherst_repair_logo.jpg" class="img-responsive" width="80" height="40">
                           </a>
                         </div>
                         <div class="collapse navbar-collapse" id="myNavbar">
@@ -82,7 +82,7 @@
                     </nav>
                         <div style="position: relative;">
                             <div id="img_container">
-                                <img src="images/amherst.jpg"/ width="100%" height="350">
+                                <img src="images/amherst.jpg"/ width="100%"><!--height="350'-->
                             </div>
                             <!--<img src="images/amherst.jpg" width="100%"><!--class="img-responsive" width="100%"-->
                             <!--<button style="position:absolute;"> click here </button>
