--- a/test.html
+++ b/test.html
@@ -107,16 +107,16 @@
                 <br><br>
                 <div class="container"> 
                     <center>
-                        <h1>Find the schools near you!</h1>
+                        <h1 style="color:white;"><b>Find the schools near you!</b></h1>
                             <form role="form">
                                 <div class="form-group">
-                                  <label for="sel1">State</label>
+                                  <label for="sel1" style="color:white; font size=20;">State</label>
                                   <select class="form-control" id="sel1">
                                     <option>Massachusetts</option>
                                     <option>Connecticut</option>
                                   </select>
                                   <br>
-                                  <label for="sel1">School</label>
+                                  <label for="sel1" style="color:white; font size=20;">School</label>
                                   <select class="form-control" id="sel1">
                                     <option>Umass</option>
                                     <option>2Uconn</option>
