--- a/test.html
+++ b/test.html
@@ -108,22 +108,23 @@
                 <div class="container"> 
                     <center>
                         <h1 style="color:white;"><b>Find the schools near you!</b></h1>
+                        <div class="well">
                             <form role="form">
                                 <div class="form-group">
-                                  <label for="sel1" style="color:white;"><font size='12'>State</font></label>
+                                  <label for="sel1" style="color:white;"><font size='6'>State</font></label>
                                   <select class="form-control" id="sel1">
                                     <option>Massachusetts</option>
                                     <option>Connecticut</option>
                                   </select>
                                   <br>
-                                  <label for="sel1" style="color:white;"><font size='12'>School</font></label>
-                                  <select class="form-control" id="sel1" width="50%">
+                                  <label for="sel1" style="color:white;"><font size='6'>School</font></label>
+                                  <select class="form-control" id="sel1">
                                     <option>Umass</option>
                                     <option>2Uconn</option>
                                   </select>
                                 </div>
                             </form>
-
+                        </div>
                     </center>
                 </div>
         </body>
