--- a/test.html
+++ b/test.html
@@ -111,13 +111,13 @@
                         <div class="well">
                             <form role="form">
                                 <div class="form-group">
-                                  <label for="sel1" style="color:white;"><font size='6'>State</font></label>
+                                  <label for="sel1" style="color:gray;"><font size='6'>State</font></label>
                                   <select class="form-control" id="sel1">
                                     <option>Massachusetts</option>
                                     <option>Connecticut</option>
                                   </select>
                                   <br>
-                                  <label for="sel1" style="color:white;"><font size='6'>School</font></label>
+                                  <label for="sel1" style="color:gray;"><font size='6'>School</font></label>
                                   <select class="form-control" id="sel1">
                                     <option>Umass</option>
                                     <option>2Uconn</option>
