--- a/test.html
+++ b/test.html
@@ -108,6 +108,7 @@
                 <div class="container"> 
                     <center>
                         <h1 style="color:white;"><b>Find the schools near you!</b></h1>
+                    </center>    
                         <div class="well">
                             <form role="form">
                                 <div class="form-group">
@@ -117,15 +118,14 @@
                                     <option>Connecticut</option>
                                   </select>
                                   <br>
-                                  <label for="sel1" style="color:gray;"><font size='6'>School</font></label>
-                                  <select class="form-control" id="sel1">
+                                  <label for="school" style="color:gray;"><font size='6'>School</font></label>
+                                  <select class="form-control" id="school">
                                     <option>Umass</option>
                                     <option>2Uconn</option>
                                   </select>
                                 </div>
                             </form>
                         </div>
-                    </center>
                 </div>
         </body>
         <footer>
