--- a/test.html
+++ b/test.html
@@ -108,7 +108,7 @@
                 <div class="container"> 
                     <center>
                         <h1 style="color:white;"><b>Find the schools near you!</b></h1>
-                        <div class="well">
+                        <div class="well" stlye="width:50%;">
                             <form role="form">
                                 <div class="form-group">
                                   <label for="sel1" style="color:gray;"><font size='5'>State</font></label>
