--- a/test.html
+++ b/test.html
@@ -111,14 +111,16 @@
                         <div class="well" style="width:50%;">
                             <form role="form">
                                 <div class="form-group">
-                                  <label for="sel1" style="color:gray;"><font size='5'>State</font></label>
-                                  <select class="form-control" id="sel1">
+                                  <label for="state" style="color:gray;"><font size='5'>State</font></label>
+                                  <select class="form-control" id="state">
+                                    <option value = "-1">Select a State</option>
                                     <option>Massachusetts</option>
                                     <option>Connecticut</option>
                                   </select>
                                   <br>
                                   <label for="school" style="color:gray;"><font size='5'>School</font></label>
                                   <select class="form-control" id="school">
+                                    <option value = "-1">Select a School</option>
                                     <option>Umass</option>
                                     <option>2Uconn</option>
                                   </select>
