--- a/test.html
+++ b/test.html
@@ -89,10 +89,11 @@
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute; margin-left:100px;">Sell</button>
                             <button type="button" class="btn btn-lg btn-info" style="position:absolute;">Repair</button>-->
                         </div>   
-                    <div class="btn-group btn-group-justified">
+                        
+                    <!--<div class="btn-group btn-group-justified">
                         <a href="#" class="btn btn-primary btn-success btn-lg" style="white-space: normal;">Sell your Phone</a>
                         <a href="#" class="btn btn-primary btn-danger btn-lg" style="white-space: normal;">Repair your Phone</a>
-                    </div>        
+                    </div>-->        
                 </div>   
                 <!--<div class="row">
                     <div class="col-sm-3"></div>
