--- a/test.html
+++ b/test.html
@@ -123,7 +123,7 @@
                                   <select class="form-control" id="school">
                                     <option value = "-1">Select a School</option>
                                     <option>Umass</option>
-                                    <option>2Uconn</option>
+                                    <option>Uconn</option>
                                   </select>
                                 </div>
                             </form>
