--- a/test.html
+++ b/test.html
@@ -127,6 +127,7 @@
                                   </select>
                                 </div>
                             </form>
+                            <button type="button" class="btn btn-md btn-success btn-block" >GO!</button>
                         </div>
                     </center>     
                 </div>
