--- a/test.html
+++ b/test.html
@@ -127,7 +127,7 @@
                                   </select>
                                 </div>
                             </form>
-                            <button type="button" class="btn btn-md btn-success btn-block" >GO!</button>
+                            <button type="button" class="btn btn-md btn-success btn-block" ><b>GO!</b></button>
                         </div>
                     </center>     
                 </div>
