--- a/test.html
+++ b/test.html
@@ -129,6 +129,7 @@
                             </form>
                             <br>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b>GO!</b></button>
+                            <p>Didn't see your School? Start a business today!</p>
                         </div>
                     </center>     
                 </div>
