--- a/test.html
+++ b/test.html
@@ -112,16 +112,16 @@
                         <div class="well" style="width:75%;">
                             <form role="form">
                                 <div class="form-group">
-                                  <label for="state" style="color:gray;"><font size='5'>State</font></label>
+                                  <!--<label for="state" style="color:gray;"><font size='5'>State</font></label>-->
                                   <select class="form-control" id="state">
-                                    <!--<option value = "-1">Select a State</option>-->
+                                    <option value = "-1">Select a State</option>
                                     <option>Massachusetts</option>
                                     <option>Connecticut</option>
                                   </select>
                                   <br>
-                                  <label for="school" style="color:gray;"><font size='5'>School</font></label>
+                                  <!--<label for="school" style="color:gray;"><font size='5'>School</font></label>-->
                                   <select class="form-control" id="school">
-                                    <!--<option value = "-1">Select a School</option>-->
+                                    <option value = "-1">Select a School</option>
                                     <option>Umass</option>
                                     <option>Uconn</option>
                                   </select>
