--- a/test.html
+++ b/test.html
@@ -108,7 +108,7 @@
                 <br><br>
                 <div class="container"> 
                     <center>
-                        <h1 style="color:white;"><b>Find the schools near you!</b></h1>
+                        <h1 class="font_2" style="color:white;"><b>Find the schools near you!</b></h1>
                         <div class="well" style="width:75%;">
                             <form role="form">
                                 <div class="form-group">
@@ -127,7 +127,6 @@
                                   </select>
                                 </div>
                             </form>
-                            <br>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b>GO!</b></button>
                             <br>
                             <p>Didn't see your School? Start a business today!</p>
