--- a/test.html
+++ b/test.html
@@ -130,6 +130,7 @@
                             <button type="button" class="btn btn-md btn-success btn-block" ><b>GO!</b></button>
                             <br>
                             <p>Didn't see your School? Start a business today!</p>
+                            <button type="button" class="btn btn-md btn-danger btn-block" ><b>Click</b></button>
                         </div>
                     </center>     
                 </div>
