--- a/test.html
+++ b/test.html
@@ -129,7 +129,7 @@
                             </form>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b>GO!</b></button>
                             <br>
-                            <p>Didn't see your School? Start a business today!</p>
+                            <p><font size="2">Didn't see your School? Start a business today!</font></p>
                             <button type="button" class="btn btn-md btn-danger btn-block" ><b>Click</b></button>
                         </div>
                     </center>     
