--- a/test.html
+++ b/test.html
@@ -129,8 +129,8 @@
                             </form>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b><font size="3">GO!</font></b></button>
                             <br>
-                            <p><font size="2">Didn't see your School? Start a business today!</font></p>
-                            <button type="button" class="btn btn-md btn-danger btn-block" ><b>Click</b></button>
+                            <p><font size="3">Didn't see your School? Start a business today!</font></p>
+                            <button type="button" class="btn btn-md btn-danger btn-block" ><b><font size="3">Click</font></b></button>
                         </div>
                     </center>     
                 </div>
