--- a/test.html
+++ b/test.html
@@ -134,6 +134,10 @@
                         </div>
                     </center>     
                 </div>
+                <center>
+                    <h2 style="color:white;"><b>CALL OR TEXT FOR QUOTE</b></h2>    
+                    <h2 style="color:white;"><b>978-855-(0040)</b></h2>
+                </center>
         </body>
         <footer>
 
