--- a/test.html
+++ b/test.html
@@ -108,7 +108,7 @@
                 <br><br>
                 <div class="container"> 
                     <center>
-                        <h1 class="font_2" style="color:white;"><b>Find the schools near you!</b></h1>
+                        <h1 class="font_2" style="color:white;">Find the schools near you!</h1>
                         <div class="well" style="width:100%;">
                             <form role="form">
                                 <div class="form-group">
@@ -129,15 +129,16 @@
                             </form>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b><font size="3">GO!</font></b></button>
                             <br>
-                            <p><font size="3">Didn't see your School? Start a business today!</font></p>
-                            <button type="button" class="btn btn-md btn-danger btn-block" ><b><font size="3">Click</font></b></button>
                         </div>
+                        <div class="well" style="width:100%;">
+                              <p><font size="3">Didn't see your School? Start a business today!</font></p>
+                            <button type="button" class="btn btn-md btn-danger btn-block" ><b><font size="3">Click</font></b></button>
+                        </div>    
+                        
+                        <h2 style="color:white;"><b>CALL OR TEXT FOR QUOTE</b></h2>    
+                        <h2 style="color:white;"><b>978-855-(0040)</b></h2>
                     </center>     
                 </div>
-                <center>
-                    <h2 style="color:white;"><b>CALL OR TEXT FOR QUOTE</b></h2>    
-                    <h2 style="color:white;"><b>978-855-(0040)</b></h2>
-                </center>
         </body>
         <footer>
 
