--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
                         
                     <div class="col-sm-10">-->
                 <div class="container">    
-                    <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
+                    <nav class="navbar navbar-default" style="margin-bottom:0px;">
                       <div class="container-fluid">
                         <div class="navbar-header">
                           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
