--- a/test.html
+++ b/test.html
@@ -32,6 +32,16 @@
                 font-family: 'Fredericka the Great', fantasy;
                 color: #AA1218;
             }
+            .font_3 {
+                font-style: normal;
+                font-variant: normal;
+                font-weight: normal;
+                font-stretch: normal;
+                font-size: 34px;
+                line-height: 1.4em;
+                font-family: 'Fredericka the Great', fantasy;
+                color: #AA1218;
+            }
             #img_container {
                 /*position:relative;
                 display:inline-block;*/
@@ -129,7 +139,7 @@
                             </form>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b><font size="3">GO!</font></b></button>
                         </div>
-                        <h1 class="font_2" style="color:white;">Didn't see your School? Start a business today!</h1>
+                        <p class="font_3" style="color:white;">Didn't see your School? Start a business today!</p>
                         <div class="well" style="width:100%;">
                               <!--<p><font size="3">Didn't see your School? Start a business today!</font></p>-->
                             <button type="button" class="btn btn-md btn-danger btn-block" ><b><font size="3">Click</font></b></button>
