--- a/test.html
+++ b/test.html
@@ -64,7 +64,7 @@
                         
                     <div class="col-sm-10">-->
                 <div class="container">    
-                    <nav class="navbar navbar-default" style="margin-bottom:0px;">
+                    <nav class="navbar navbar-inverse" style="margin-bottom:0px;">
                       <div class="container-fluid">
                         <div class="navbar-header">
                           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -138,11 +138,9 @@
                                 </div>
                             </form>
                             <button type="button" class="btn btn-md btn-success btn-block" ><b><font size="3">GO!</font></b></button>
+                            <p><font size="3">Didn't see your School? Start a business today!</font></p>                       
                         </div>
-                        <p class="font_3" style="color:white;">Didn't see your School? Start a business today!</p>
-                              <!--<p><font size="3">Didn't see your School? Start a business today!</font></p>-->
-                            <button type="button" class="btn btn-md btn-danger btn-block" ><b><font size="3">Click</font></b></button>
-                        
+
                         <h2 style="color:white;"><b>CALL OR TEXT FOR QUOTE</b></h2>    
                         <h2 style="color:white;"><b>978-855-(0040)</b></h2>
                     </center>     
