--- a/FIRST.html
+++ b/FIRST.html
@@ -57,7 +57,7 @@
                         </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                          <li><a href="index.html">Home</a></li>
+                          <li><a href="index.html"><font size="6">Home</font></a></li>
                           <li><a href="Projects.html">Projects</a></li>
                           <li class="active"><a href="Interests.html">Interests</a></li> 
                           <li><a href="Current_Work.html">Current Work</a></li> 
