--- a/FIRST.html
+++ b/FIRST.html
@@ -57,7 +57,7 @@
                         </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                          <li><a href="index.html"><font size="6">Home</font></a></li>
+                          <li><a href="index.html">Home</a></li>
                           <li><a href="Projects.html">Projects</a></li>
                           <li class="active"><a href="Interests.html">Interests</a></li> 
                           <li><a href="Current_Work.html">Current Work</a></li> 
@@ -87,7 +87,7 @@
             <div class="row">
               <nav class="col-sm-3" id="myScrollspy">
                 <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
-                  <li><a href="#overview">Overview</a></li>
+                  <li><a href="#overview"><font size="6">Overview</font></a></li>
                   <li><a href="#STEM">STEM</a></li>
                   <li><a href="#future">Our Future</a></li>
                 </ul>
