--- a/FIRST.html
+++ b/FIRST.html
@@ -92,7 +92,7 @@
                   <li><a href="#future">Our Future</a></li>
                 </ul>
               </nav>
-                <h2 id="overview"><b>Overview</b></h2>
+                <h2 id="overview" style="color:white;"><b>Overview</b></h2>
                 <br>
               <div class="col-sm-9">  
                 <center>
